<?xml version="1.0"?>
<package format="3">
  <name>traps_ssl_nav</name>
  <version>0.0.0</version>
  <description>navigation stack of TRAPS SSL</description>
  <maintainer email="traps.robocup@gmail.com">TRAPS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 2">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 2">std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>

  <build_depend condition="$ROS_VERSION == 2">ament_cmake_auto</build_depend>
  <build_depend>eigen</build_depend>
  
  <exec_depend condition="$ROS_VERSION == 2">ros2launch</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_clang_format</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>